environment/blade/base/gloo-mesh/argocd/istio/argocd-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    service.istio.io/canonical-name: istio-ingressgateway-ns
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - argocd.jad.solo.io
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd
    hosts:
    - argocd.jad.solo.io
